syntax = "proto3";

package internal.proto.resource_map.v1;

service ResourceMapService {
  rpc TryInitResource(TryInitResourceRequest) returns (TryInitResourceResponse);
  rpc CompleteInitResource(CompleteInitResourceRequest) returns (CompleteInitResourceResponse);
  rpc FailInitResource(FailInitResourceRequest) returns (FailInitResourceResponse);
  rpc Acquire(AcquireRequest) returns (AcquireResponse);
  rpc Release(ReleaseRequest) returns (ReleaseResponse);
}

message Caller {
  string file = 1;
  int64 line = 2;
  string hash = 3;
}

message TryInitResourceRequest {
  reserved 2;
  string resource_name = 1;
  repeated Caller context = 3;
}

message TryInitResourceResponse {
  bool should_try = 1;
}

message CompleteInitResourceRequest {
  reserved 2;
  string resource_name = 1;
  repeated Caller context = 3;
}

message CompleteInitResourceResponse {}

message FailInitResourceRequest {
  reserved 2;
  string resource_name = 1;
  repeated Caller context = 3;
}

message FailInitResourceResponse {}

message AcquireRequest {
  reserved 2;
  string resource_name = 1;
  repeated Caller context = 5;
  int64 max_parallelism = 3;
  bool exclusive = 4;
}

message AcquireResponse {}

message ReleaseRequest {
  reserved 2;
  string resource_name = 1;
  repeated Caller context = 3;
}

message ReleaseResponse {}
